<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>

    <string name="main_screen_title_label">My Nanodegree Android Apps!</string>

    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="super_duo">Super Duo</string>
    <string name="capstone">Capstone</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="xinay">Xinay</string>

</resources>
