<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_screen_title_label"
        android:id="@+id/titleTextView"
        android:layout_marginTop="@dimen/title_vertical_margin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/buttonOne"
        android:background="@color/light_green_500"
        android:textColor="@color/white"
        android:layout_below="@+id/titleTextView"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/title_vertical_margin" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/super_duo"
        android:id="@+id/buttonTwo"
        android:background="@color/blue_500"
        android:textColor="@color/white"
        android:layout_below="@+id/buttonOne"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:layout_centerInParent="true" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/buttonThree"
        android:background="@color/deep_purple_500"
        android:textColor="@color/white"
        android:layout_below="@+id/buttonTwo"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:layout_centerInParent="true" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/buttonFour"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:layout_below="@+id/buttonThree"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:layout_centerInParent="true" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/buttonFive"
        android:background="@color/pink_500"
        android:textColor="@color/white"
        android:layout_below="@+id/buttonFour"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:layout_centerInParent="true" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/xinay"
        android:id="@+id/buttonSix"
        android:background="@color/red_500"
        android:textColor="@color/white"
        android:layout_below="@+id/buttonFive"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:layout_centerInParent="true" />

</RelativeLayout>
